科技数据二级详情页面数据映射

--- a/templates/resource.html
+++ b/templates/resource.html
@@ -183,7 +183,7 @@
                         <ul class="pi-list">
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                    <a href=""><img alt="PC/手机/微信站三合一" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
+                                    <a href="?type=agritech"><img alt="农业科技资源数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
                                     <h4 class="pi-list-title">农业科技资源数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
