--- a/templates/techdb.html
+++ b/templates/techdb.html
@@ -16,7 +16,7 @@
                     <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;农业科技机构数据库</span></h2>
                     <ul>
                         {% for db in databases %}
-                            <li><a href="?id={{ db.id }}" class="{% ifequal selectid db.id %}Selected{% endifequal %}">{{ db.title }}</a></li>
+                            <li><a href="?type=agritech&id={{ db.id }}" class="{% ifequal selectid db.id %}Selected{% endifequal %}">{{ db.title }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
                                             {% for content in item %}
                                                 {% ifequal forloop.counter 1 %}
                                                     <td class="Pad_Left5 EllipsisTd" style="text-align: center;">
-                                                        <a href="javascript:;"  style="padding-left: 10px;color: rgb(0, 0, 238)" title="{{ content }}">{{ content }} </a>
+                                                        <a href="?type=agritech&selectid={{ selectid }}&index={{ item.0 }}"  style="padding-left: 10px;color: rgb(0, 0, 238)" title="{{ item.1 }}">{{ item.1 }} </a>
                                                     </td>
                                                 {% else %}
                                                     <td class="Pad_Left5 EllipsisTd" title="{{ content }}" style="text-align: center;">{{ content }}</td>
