--- a/templates/pestdetail.html
+++ b/templates/pestdetail.html
@@ -13,23 +13,31 @@
         <div class="Box10 ClearFloat">
             <div class="Box210 FloatLeft MarginLeft10">
                 <div class="ListMenu">
-                    <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;农业科技机构数据库</span></h2>
+                    <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;农业有害生物数据库</span></h2>
                     <ul>
                         {% for db in databases %}
-                            <li><a href="?type=agritech&select={{ select }}&id={{ db.id }}" class="{% ifequal select db.id %}Selected{% endifequal %}">{{ db.title }}</a></li>
+                            <li><a href="?type=pest&select={{ select }}&id={{ db.id }}" class="{% ifequal select db.id %}Selected{% endifequal %}">{{ db.title }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
             </div>
         <div class="Box77 FloatLeft MarginLeft10">
             <div class="List">
-                <h1 class="ListTitle" >浏览详细数据<a href="?type=agritech&select={{ select }}">批量下载数据</a></h1>
+                <h1 class="ListTitle">浏览详细数据<a href="?type=agritech&select={{ select }}">批量下载数据</a></h1>
                 <table cellspacing="0" cellpadding="0" border="0" class="ListContent EllipsisTable">
                     <tbody>
                         {% for item in detail %}
                                 <tr>
-                                    <th style="width:80px">{{ item.key }}</th>
-                                    <td style="line-height:30px;">{{ item.value }}</td>
+                                    <th style="width:100px;text-align: right">{{ item.key }}</th>
+
+                                    <td style="line-height:30px;">
+                                        {% if "images" in item.value %}
+                                            <img src="/media/{{ item.value }}">
+                                        {% else %}
+                                            {{ item.value }}
+                                        {% endif %}
+                                    </td>
+
                                 </tr>
                         {% endfor %}
                     </tbody>
@@ -42,11 +50,5 @@
 {% endblock %}
 
 {% block foot %}
-    <script>
-        $("back").on("click", function () {
-                     history.back()
-
-        })
-    </script>
 {% endblock %}
 
