有害生物数据一二级页面数据映射

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -38,7 +38,7 @@
             <img src="{% static  "img/chartsite.png" %}" alt="农业统计数据可视化平台欢迎你" style="margin-top: -5px;">
           </a>
         </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" style="width: 1140px;">
             <ul class="nav navbar-nav">
                 <li><a href="{% url  'index' %}">网站首页</a></li>
                 <li><a href="{% url  'resource' %}">数据资源<i class="gif-hot"></i></a> </li>
