--- a/templates/resource.html
+++ b/templates/resource.html
@@ -154,7 +154,7 @@
                         <ul class="pi-list">
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                    <a href="?type=years&year=2016"><img alt="农业统计年鉴数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
+                                    <a href="?type=years"><img alt="农业统计年鉴数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
                                     <h4 class="pi-list-title">农业统计年鉴数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
@@ -163,7 +163,7 @@
                             </li>
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                     <a href=""><img alt="搜索引擎主动推送" src="http://cdn.wemorefun.com/content/statics/images/i-pic-2.gif" class="pi-list-img"></a>
+                                     <a href="?type=pest"><img alt="农业有害生物数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-2.gif" class="pi-list-img"></a>
                                     <h4 class="pi-list-title">农业有害生物数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
@@ -172,8 +172,8 @@
                             </li>
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                 <a href=""><img alt="高效灵活的设计器" src="http://cdn.wemorefun.com/content/statics/images/i-pic-3.gif" class="pi-list-img"></a>
-                                    <h4 class="pi-list-title">作物遗传资源数据</h4>
+                                 <a href="?type=agritech"><img alt="作物遗传资源数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-3.gif" class="pi-list-img"></a>
+                                    <h4 class="pi-list-title">农业科技资源数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
                                     <p class="desnum-r">浏览量：<span>187</span></p>
@@ -183,8 +183,8 @@
                         <ul class="pi-list">
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                    <a href="?type=agritech"><img alt="农业科技资源数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
-                                    <h4 class="pi-list-title">农业科技资源数据</h4>
+                                    <a href=""><img alt="农业科技资源数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-1.gif" class="pi-list-img"></a>
+                                    <h4 class="pi-list-title">作物遗传资源数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
                                     <p class="desnum-r">浏览量：<span>187</span></p>
@@ -192,7 +192,7 @@
                             </li>
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                     <a href=""><img alt="搜索引擎主动推送" src="http://cdn.wemorefun.com/content/statics/images/i-pic-2.gif" class="pi-list-img"></a>
+                                     <a href=""><img alt="作物品种品质数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-2.gif" class="pi-list-img"></a>
                                     <h4 class="pi-list-title">作物品种品质数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
@@ -201,7 +201,7 @@
                             </li>
                             <li class="pi-list-item">
                                 <div class="pi-list-box">
-                                 <a href=""><img alt="高效灵活的设计器" src="http://cdn.wemorefun.com/content/statics/images/i-pic-3.gif" class="pi-list-img"></a>
+                                 <a href=""><img alt="农产品资源数据" src="http://cdn.wemorefun.com/content/statics/images/i-pic-3.gif" class="pi-list-img"></a>
                                     <h4 class="pi-list-title">农产品资源数据</h4>
                                     <p class="pi-list-int">反映我国国情国力的基本统计指标，全面、深入展示中国经济最新发展态势。</p>
                                     <p class="desnum-l">数据集：<span>187</span></p>
