--- a/templates/visual.html
+++ b/templates/visual.html
@@ -14,7 +14,7 @@
 {% block content %}
 {#    <div class="page-header bg-gray "></div>#}
 
-    <div class="content">
+    <div class="content" style="width: 1295px">
     	<div class="contentTop"><h2>最新可视分析图</h2></div>
         <div class="caseList">
         	<ul id="caseList">
