--- a/templates/500.html
+++ b/templates/500.html
@@ -13,9 +13,9 @@
 <section>
 	<div class="wp">
 		<div class="cont">
-			<div class="fl error_cut"><img src="{% static 'images/pic503.png' %}"/></div>
+			<div class="fl error_cut"><img src="{% static 'img/pic503.png' %}"/></div>
 			<div class="fr error_cut">
-				<img src="{% static 'images/word503.png' %}"/>
+				<img src="{% static 'img/pic503.png' %}"/>
 				<br/><br/><br/><br/><br/><br/>
 				<p>服务器错误，请稍后重新刷新。</p>
 			</div>
