--- a/templates/service.html
+++ b/templates/service.html
@@ -13,13 +13,13 @@
 {%  block content %}
     <div class="container context">
       <div class="row summary">
-        <div class="col-md-4 col-xs-12">
-          <img src="{% static 'img/biz-summary.png' %}">
-        </div>
-        <div class="col-md-8 col-xs-12">
+{#        <div class="col-md-4 col-xs-12">#}
+{#          <img src="{% static 'img/nongye01.jpg' %}">#}
+{#        </div>#}
+        <div class="col-md-12 col-xs-12">
           <div class="text">
             <h1>网站介绍</h1>
-            <p><b>农业统计数据</b>是XXX于2017年推出的农业统计数据可视化平台。
+            <p><b>农业统计数据</b>是一个农业统计数据可视化平台。
             通过独特的<b>互动图表展现</b>，向了解农业发展现状的同学提供专业、丰富、有趣的数据内容。在这里，每个希望提升自己的人，
             都可以实时获得交互式编程所带来的极致体验。</p>
 
