--- a/templates/tech.html
+++ b/templates/tech.html
@@ -24,7 +24,7 @@
             </div>
         <div class="Box77 FloatLeft MarginLeft10">
             <div class="List">
-                <h1 class="ListTitle">浏览全部数据<a href="javascript:;" onclick="ADataForm_Click();" target="_blank">批量下载数据</a></h1>
+                <h1 class="ListTitle">浏览全部数据<a href="{% url 'share' %}?category=4" onclick="ADataForm_Click();" target="_blank">批量下载数据</a></h1>
                 <table class="TableBorder0">
                     <tbody>
                         <tr>
