--- a/templates/share.html
+++ b/templates/share.html
@@ -1,236 +1,89 @@
 {% extends 'base/base.html' %}
 {% block cssjs %}
     {% load static %}
-        <link rel="stylesheet" href="{% static 'css/resource.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/common_pager.css' %}">
-
-        <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
-        <link rel="stylesheet" href="{% static 'css/cloud.css' %}">
-        <link rel="stylesheet" href="{% static 'css/nongye_index.css' %}">
-
+    <link rel="stylesheet" href="{% static 'layui/layui.css' %}">
+    <link rel="stylesheet" href="{% static 'css/invite.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookpublic.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookstyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/newStyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/single.css' %}">
 {% endblock %}
+{% block content %}
+    <div class="main w Ynavigation custom" style="margin-top: 100px">
 
-{%  block content %}
-    <div class="container" style="margin-top: 60px">
-        <div class="main" >
-            <div class="main_center">
-            <div class="sjzy_detail_left">
-                <div class="left_2">
-                    <div class="title">
-                        <ul style="width: 400px">
-                            <span>排序：</span>
-                            <li onclick="ExchangeMore.order('date',
-                            true)"><a>时间</a>
-                            </li>
-                            <li onclick="ExchangeMore.order('size',
-                            false)"><a>大小</a>
-                            </li>
-                            <li onclick="ExchangeMore.order('down',
-                            false)"><a>下载量</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="content">
-                            <ul style="text-align: center">
-                                    <li>
-                                        <div class="content_title filetype_302">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=3d74433a-0d90-440f-b6ce-88820a2db59b" target="_blank">2014年我国农产品进口企业百强名单</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>数据统计了农产品出口企业top100名单 ，包括企业名称、所属地区、行业、企业年龄等字段。</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>5M豆</li>
-                                                <li>28次下载</li>
-                                                <li>39.50K</li>
-                                                <li>2015-09-10</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=f8b500e4e80e4783948012e62c7aab64">翘翘小猫咪</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="海关信息网和工商总局">海关信息网和工商总局</a></li>
+    <div id="div_single_r" class="single_r fl" style="float: none">
+        <!-----单本年鉴 右边 start --------->
+        <div id="ResultPage" class="s_page" style="font-size: 14px;">
+        <div class="layui-box layui-laypage layui-laypage-default" id="layui-laypage-10" style="margin: 0 auto 0 20px">
+        <span class="layui-laypage-count" >全部数据集资源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共{{ counts }}条</span>
+        {% for page in items.pages %}
+        {% if page %}
+        {% ifequal page items.number %}
+        <span class="layui-laypage-curr" ><em class="layui-laypage-em"></em><em>{{ page }}</em></span>
+        {% else %}
+        <a href="?{{ page.querystring }}" class="page" data-page="{{ page }}" >{{ page }}</a>
+        {% endifequal %}
+        {% else %}
+        <span class="layui-laypage-spr" >…</span>
+        {% endif %}
+        {% endfor %}
+        <script>
+        $("#demo7 .layui-laypage-btn").on("click", function () {
+        location.href += "&page=" + $("#inputpage").val()
+        })
+        </script>
+        </div>
+        </div>
+        <div id="ResultList_jy" class="s_table">
+        <!----- 简约版 start------>
+        <table>
+        <tbody>
+        <tr class="s_tab">
+        <td class="s_tab_title" style="width:75%;">标题</td>
+        <td style="width:10%;">文件编号</td>
+        <td style="width:15%;">下载文件</td>
+        </tr>
+        {% for item in items.object_list %}
+        <tr style="font-size: 12px">
+        <td>&nbsp;&nbsp;<a class="model_a" title="点击可查看表格数据" href="{% url 'text' item.slug %}"  style="cursor: pointer">{{ item.slug }}</a></td>
+        <td class="s_tab_page">{{ item.id }}</td>
+        <td>
+        <a target="_blank" href="{% url 'text' item.slug %}" ><img src="{% static 'img/down.png'%}" style="margin-left: 30px"></a>
+        </td>
 
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="content_title filetype_304">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=e3bf946c-1f6f-4968-9a15-0bebc5d7015a" target="_blank">COMEX期货交易行情2014年10月</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>纽约商品交易所黄金每日的开盘价、收盘价、最高价等行情数据。</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>免费</li>
-                                                <li>9次下载</li>
-                                                <li>312.87K</li>
-                                                <li>2015-08-06</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=24c94340b24241a396b9120898328c47">金银钛铼镁</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="巨灵财经">巨灵财经</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="content_title filetype_308">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=ed2bfba1-4e30-4fe3-97f7-5bd4408915fc" target="_blank">山东省涉农企业软件著作权申请情况分布（一公里网格）</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>数据概况：该数据为涉农计算机软件著作权的公里网格shp图层；数据源涵盖了软件全称、软件简称、版本号、首次发表时间、登记时间、著作权人、软件分类、行业分类、gis坐标；可以从行业分类、软件分类、时间等维度统计企业的计算机软件著作权申请数量，展现各省市软著分布情况。
-            数据参数：时间范围：1992年至今；更新频率：月度；数据总量：93万软著信息
-            数据样例：山东省涉农企业软著申请情况分布（2014年）</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>2000农业币</li>
-                                                <li>1次下载</li>
-                                                <li>1.30M</li>
-                                                <li>2015-04-01</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=c6fa5bdc0bcd460d971428350ca92b19">showing</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="量子数聚">量子数聚</a></li>
+        </tr>
+        {%  endfor %}
+        </tbody></table>
 
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="content_title filetype_308">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=ed2bfba1-4e30-4fe3-97f7-5bd4408915fc" target="_blank">山东省涉农企业软件著作权申请情况分布（一公里网格）</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>数据概况：该数据为涉农计算机软件著作权的公里网格shp图层；数据源涵盖了软件全称、软件简称、版本号、首次发表时间、登记时间、著作权人、软件分类、行业分类、gis坐标；可以从行业分类、软件分类、时间等维度统计企业的计算机软件著作权申请数量，展现各省市软著分布情况。
-            数据参数：时间范围：1992年至今；更新频率：月度；数据总量：93万软著信息
-            数据样例：山东省涉农企业软著申请情况分布（2014年）</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>2000农业币</li>
-                                                <li>1次下载</li>
-                                                <li>1.30M</li>
-                                                <li>2015-04-01</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=c6fa5bdc0bcd460d971428350ca92b19">showing</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="量子数聚">量子数聚</a></li>
+        </div><!----- 简约版 end------>
+        <script type="text/javascript">
+        //左侧目录与简介切换
+        function Switch(code) {
+        if (code === 'ml') {
+        $("#tit_jj").removeClass("current");
+        $("#tit_ml").addClass("current");
 
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="content_title filetype_308">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=ed2bfba1-4e30-4fe3-97f7-5bd4408915fc" target="_blank">山东省涉农企业软件著作权申请情况分布（一公里网格）</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>数据概况：该数据为涉农计算机软件著作权的公里网格shp图层；数据源涵盖了软件全称、软件简称、版本号、首次发表时间、登记时间、著作权人、软件分类、行业分类、gis坐标；可以从行业分类、软件分类、时间等维度统计企业的计算机软件著作权申请数量，展现各省市软著分布情况。
-            数据参数：时间范围：1992年至今；更新频率：月度；数据总量：93万软著信息
-            数据样例：山东省涉农企业软著申请情况分布（2014年）</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>2000农业币</li>
-                                                <li>1次下载</li>
-                                                <li>1.30M</li>
-                                                <li>2015-04-01</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=c6fa5bdc0bcd460d971428350ca92b19">showing</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="量子数聚">量子数聚</a></li>
+        $("#div_jj").addClass("hide");
+        $("#div_ml").removeClass("hide");
 
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="content_title filetype_308">
-                                            <a href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=ed2bfba1-4e30-4fe3-97f7-5bd4408915fc" target="_blank">山东省涉农企业软件著作权申请情况分布（一公里网格）</a>
-                                            <div class="type_1"></div>
-                                        </div>
-                                        <div class="content_wen"><p>数据概况：该数据为涉农计算机软件著作权的公里网格shp图层；数据源涵盖了软件全称、软件简称、版本号、首次发表时间、登记时间、著作权人、软件分类、行业分类、gis坐标；可以从行业分类、软件分类、时间等维度统计企业的计算机软件著作权申请数量，展现各省市软著分布情况。
-            数据参数：时间范围：1992年至今；更新频率：月度；数据总量：93万软著信息
-            数据样例：山东省涉农企业软著申请情况分布（2014年）</p></div>
-                                        <div class="content_tag">
-                                            <ul>
-                                                <li>2000农业币</li>
-                                                <li>1次下载</li>
-                                                <li>1.30M</li>
-                                                <li>2015-04-01</li>
-                                                <li>发布者:<a href="http://www.dataagri.com/agriculture/user/mhj.action?uuid=c6fa5bdc0bcd460d971428350ca92b19">showing</a>
-                                                </li>
-                                                <li style="border: none;width:300px;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-spacing: normal;">数据来源:
-                                                    <a href="javascript:void(0)" title="量子数聚">量子数聚</a></li>
+        } else {
+        $("#tit_ml").removeClass("current");
+        $("#tit_jj").addClass("current");
 
-                                            </ul>
-                                        </div>
-                                    </li>
+        $("#div_ml").addClass("hide");
+        $("#div_jj").removeClass("hide");
+        }
+        }
+        </script>
 
-                            </ul>
-
-                        <div style="margin-left: 200px;">
-                 <div class="pagination">
-                    <ul>
-                        <a href="javascript:;"><span>首页</span></a>
-                        <a href="javascript:;"><span><p class="prepage"></p>上一页</span></a>
-                        <a href="javascript:;" class="btn-focus"><span>1</span></a>
-                        <a href="javascript:;" onclick="Pager.GoTo(2)"><span>2</span></a>
-                        <a href="javascript:;" onclick="Pager.GoTo(3)"><span>3</span></a>
-                        <a href="javascript:;" onclick="Pager.GoTo(4)"><span>4</span></a>
-                        <a href="javascript:;" onclick="Pager.GoTo(2)" style="_width:80px;"><span><p
-                        class="nextpage"></p>下一页</span></a>
-                        <a href="javascript:;" onclick="Pager.GoTo(4)"><span>尾页</span></a>
-                    </ul>
-                    <input type="hidden" value="10" id="pager_rows">
-                </div></div>
-                    </div>
-                </div>
-            </div>
-            <div class="sjzy_detail_right">
-                <div class="right_1">
-                    <div class="title">发布数据</div>
-                    <div class="content">
-                        <div class="book">
-                            <span>247</span>
-                            组
-                        </div>
-
-                            <input type="button" class="right_1_btn" onclick="openLoginDialog();">
-
-                    </div>
-                </div>
-                <div class="right_2">
-                    <div class="title">热点下载</div>
-                    <div class="content">
-                        <ul>
-
-                            <li><a class="top1" title="2015年全国名特优新农产品（茶叶类）" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=f4c59bbc-f020-496c-83d4-a48637626b86">2015年全国名特优新农产品（茶叶类）</a><span>146次</span>
-
-                            </li><li><a class="top2" title="截至2014年10月全国各省份涉农企业数量统计" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=0e421c48-9956-4066-afd7-72c6144528b7">截至2014年10月全国各省份涉农企业数量统计</a><span>117次</span>
-                            </li><li><a class="top3" title="截至2014年10月全国各省份涉农企业数量统计" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=0e421c48-9956-4066-afd7-72c6144528b7">截至2014年10月全国各省份涉农企业数量统计</a><span>117次</span>
-                            </li><li><a class="top4" title="截至2014年10月全国各省份涉农企业数量统计" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=0e421c48-9956-4066-afd7-72c6144528b7">截至2014年10月全国各省份涉农企业数量统计</a><span>117次</span>
-                        </li></ul>
-                    </div>
-
-                </div>
-                <div class="right_3">
-                    <div class="title">热点收藏</div>
-                    <div class="content">
-                        <ul>
-
-                            <li><a class="top1" title="农业产业化国家重点龙头第六次监测合格及递补企业点图层" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=f84a656a-8331-4292-8e74-7f78cb647e2a">农业产业化国家重点龙头第六次监测合格及递补企业点图层</a><span>2次</span>
+</div>
+</div>
 
 
-                            </li><li><a class="top2" title="近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=36496ca0-afd6-4790-a132-1bf0ef2cd72c">近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息</a><span>2次</span>
-                            </li><li><a class="top3" title="近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=36496ca0-afd6-4790-a132-1bf0ef2cd72c">近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息</a><span>2次</span>
-                            </li><li><a class="top4" title="近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息" href="http://www.dataagri.com/agriculture/exchange/sdd.action?uuid=36496ca0-afd6-4790-a132-1bf0ef2cd72c">近三年小原皮、大原皮、皮革、毛皮的化学处理相关实用新型专利信息</a><span>2次</span>
-
-
-                        </li></ul>
-                    </div>
-                </div>
-            </div>
-
-
-            </div>
-            </div>
-
-    </div>
 {% endblock %}
 
 {% block foot %}
+
+
 {% endblock %}
+
