--- a/templates/visual.html
+++ b/templates/visual.html
@@ -20,8 +20,8 @@
         	<ul id="caseList">
                 {% for i in chart.object_list %}
                     <li>
-                        <a href="/chart" target="_blank">
-                            <div class="caseThum"><img original="{% static i.surface %}" width="300" height="180" align="{{ i.name }}" class="lazy" src="{% static i.surface %}" style="display: block;"></div>
+                        <a href="/chart?id={{ i.id }}" target="_blank">
+                            <div class="caseThum"><img width="300" height="180" align="{{ i.name }}" class="lazy" src="{% get_static_prefix %}{{ i.surface }}" style="display: block;"></div>
                             <div class="caseBottom">
                                 <div class="caseName">{{ i.name }}</div>
                                 <div class="caseInfo">
